# tiff-inspector

./: CMakeLists.txt  README.md
snap/: snapcraft.yaml
src/: main.cpp
